minor class changes

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="skillstree center">
           <div class="grid__col--12 skilltree center">
             <div>
-              <a class="intro pointer">
+              <a class="introduction pointer">
                 <span class="skill red skillhover"></span>
                 <p>Introduction</p>
               </a>
@@ -36,15 +36,15 @@
               <span class="skill yellow skillhover"></span>
               <p>Alphabet</p>
             </a>
-            <a class="basic pointer">
+            <a class="basics1 basic pointer">
               <span class="skill green skillhover"></span>
               <p>Basics 1</p>
             </a>
-            <a class="basic pointer">
+            <a class="basics2 basic pointer">
               <span class="skill pink skillhover"></span>
               <p>Basics 2</p>
             </a>
-            <a class="speech pointer">
+            <a class="phrases pointer">
               <span class="skill blue skillhover"></span>
               <p>Phrases</p>
             </a>
@@ -56,11 +56,11 @@
               <span class="skill yellow skillhover"></span>
               <p>Animals</p>
             </a>
-            <a class="stars pointer">
+            <a class="plurals pointer">
               <span class="skill green skillhover"></span>
               <p>Plurals</p>
             </a>
-            <a class="box pointer">
+            <a class="possession pointer">
               <span class="skill pink skillhover"></span>
               <p>Possession</p>
             </a>
@@ -68,19 +68,19 @@
               <span class="skill blue skillhover"></span>
               <p>Clothing</p>
             </a>
-            <a class="question pointer">
+            <a class="questions pointer">
               <span class="skill red skillhover"></span>
               <p>Questions</p>
             </a>
-            <a class="run pointer">
+            <a class="preset1 run pointer">
               <span class="skill yellow skillhover"></span>
               <p>Present 1</p>
             </a>
-            <a class="art pointer">
+            <a class="colors art pointer">
               <span class="skill green skillhover"></span>
               <p>Colors</p>
             </a>
-            <a class="magnet pointer">
+            <a class="conjunctions magnet pointer">
               <span class="skill pink skillhover"></span>
               <p>Conjunctions</p>
             </a>
@@ -92,7 +92,7 @@
               <span class="skill red skillhover"></span>
               <p>Prepositions</p>
             </a>
-            <a class="clock pointer">
+            <a class="time pointer">
               <span class="skill yellow skillhover"></span>
               <p>Time</p>
             </a>
@@ -104,31 +104,31 @@
               <span class="skill pink skillhover"></span>
               <p>Sizes</p>
             </a>
-            <a class="crown pointer">
+            <a class="occupation pointer">
               <span class="skill blue skillhover"></span>
               <p>Occupation</p>
             </a>
-            <a class="adject pointer">
+            <a class="adject1 adject pointer">
               <span class="skill red skillhover"></span>
               <p>Adject. 1</p>
             </a>
-            <a class="run pointer">
+            <a class="preset2 run pointer">
               <span class="skill yellow skillhover"></span>
               <p>Present 2</p>
             </a>
-            <a class="cog pointer">
+            <a class="determin cog pointer">
               <span class="skill green skillhover"></span>
               <p>Determin.</p>
             </a>
-            <a class="sound pointer">
+            <a class="adverbs pointer">
               <span class="skill pink skillhover"></span>
               <p>Adverbs</p>
             </a>
-            <a class="glasses pointer">
+            <a class="objects pointer">
               <span class="skill blue skillhover"></span>
               <p>Objects</p>
             </a>
-            <a class="diamond pointer">
+            <a class="tobe pointer">
               <span class="skill red skillhover"></span>
               <p>To Be</p>
             </a>
@@ -136,39 +136,39 @@
               <span class="skill yellow skillhover"></span>
               <p>Places</p>
             </a>
-            <a class="group pointer">
+            <a class="people pointer">
               <span class="skill green skillhover"></span>
               <p>People</p>
             </a>
-            <a class="group pointer">
+            <a class="objpronouns people pointer">
               <span class="skill pink skillhover"></span>
               <p>Obj. Pronouns</p>
             </a>
-            <a class="circle pointer">
+            <a class="numbers pointer">
               <span class="skill blue skillhover"></span>
               <p>Numbers</p>
             </a>
-            <a class="run pointer">
+            <a class="pasttense run pointer">
               <span class="skill red skillhover"></span>
               <p>Past Tense</p>
             </a>
-            <a class="run pointer">
+            <a class="present3 run pointer">
               <span class="skill yellow skillhover"></span>
               <p>Present 3</p>
             </a>
-            <a class="flag pointer">
+            <a class="countries flag pointer">
               <span class="skill green skillhover"></span>
               <p>Countries</p>
             </a>
-            <a class="adject pointer">
+            <a class="adject2 adject pointer">
               <span class="skill pink skillhover"></span>
               <p>Adject 2</p>
             </a>
-            <a class="group pointer">
+            <a class="pronouns people pointer">
               <span class="skill blue skillhover"></span>
               <p>Pronouns</p>
             </a>
-            <a class="compass pointer">
+            <a class="direction pointer">
               <span class="skill red skillhover"></span>
               <p>Direction</p>
             </a>
@@ -176,11 +176,11 @@
               <span class="skill yellow skillhover"></span>
               <p>Education</p>
             </a>
-            <a class="run pointer">
+            <a class="participle run pointer">
               <span class="skill green skillhover"></span>
               <p>Participle</p>
             </a>
-            <a class="heart pointer">
+            <a class="feelings pointer">
               <span class="skill pink skillhover"></span>
               <p>Feelings</p>
             </a>
@@ -204,15 +204,15 @@
               <span class="skill pink skillhover"></span>
               <p>Communication</p>
             </a>
-            <a class="ghost pointer">
+            <a class="spiritual pointer">
               <span class="skill blue skillhover"></span>
               <p>Spiritual</p>
             </a>
-            <a class="run pointer">
+            <a class="future run pointer">
               <span class="skill red skillhover"></span>
               <p>Future</p>
             </a>
-            <a class="art pointer">
+            <a class="arts art pointer">
               <span class="skill yellow skillhover"></span>
               <p>Arts</p>
             </a>
@@ -225,18 +225,18 @@
               <p>Science</p>
             </a>
 
-            <span class="added-skill">
-              <!-- <a class="add pointer">
+            <!-- <span class="added-skill">
+              <a class="add pointer">
                 <span class="skill green skillhover"></span>
                 <p>Added Skill</p>
-              </a> -->
+              </a>
             </span>
             <div class="add-a-skill">
               <a class="addskill pointer">
                 <span class="add-skill skillhover"></span>
                 <p>Add Skill</p>
               </a>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
