Applied relevant comments

--- a/index.html
+++ b/index.html
@@ -20,8 +20,11 @@
     <link rel="stylesheet" href="css/skills-tree.css" />
   </head>
   <body>
+    <!-- Background -->
     <div class="bgi"></div>
     <div class="bgc"></div>
+
+    <!-- Skill Tree -->
     <div class="skills-tree-container">
       <div class="grid learning-courses">
         <div class="skillstree center">
@@ -240,6 +243,11 @@
           </div>
         </div>
       </div>
+    </div>
+
+    <!-- Lessons -->
+    <div class="lessons-container">
+
     </div>
   </body>
 </html>
