--- a/skills/alphabet.html
+++ b/skills/alphabet.html
@@ -29,7 +29,7 @@
         <a class="btn--default gotolesson" href="../lessons/alphabet/alphabet.html">start</a>
       </div>
       <div class="lesson-flyer alphabet txtcenter">
-        <h2>Matching Exercise</h2>
+        <h2>Hearing Exercise</h2>
 
         <p class="lesson-preview">
           &nbsp;
