--- a/lessons/alphabet/speaking.html
+++ b/lessons/alphabet/speaking.html
@@ -5,16 +5,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=9" />
-    <link rel="stylesheet" href="../libraries/polyui/polyui.css">
-    <link rel="stylesheet" href="../libraries/alertify/themes/alertify.core.css" />
-    <link rel="stylesheet" href="../libraries/alertify/themes/alertify.default.css" />
-    <link rel="stylesheet" href="../libraries/font-awesome/font-awesome.css" />
-    <link rel="stylesheet" href="../libraries/font-awesome/macset.css" />
-    <link rel="stylesheet" href="../css/index.css" />
-    <link rel="stylesheet" href="../css/lessongrid.css" />
-    <link rel="stylesheet" href="../css/vars.css" />
-    <script src="../libraries/jquery/jquery.js"></script>
-    <script src="../libraries/alertify/alertify.min.js"></script>
+    <link rel="stylesheet" href="/libraries/polyui/polyui.css">
+    <link rel="stylesheet" href="/libraries/alertify/themes/alertify.core.css" />
+    <link rel="stylesheet" href="/libraries/alertify/themes/alertify.default.css" />
+    <link rel="stylesheet" href="/libraries/font-awesome/font-awesome.css" />
+    <link rel="stylesheet" href="/libraries/font-awesome/macset.css" />
+    <link rel="stylesheet" href="/css/lessongrid.css" />
+    <link rel="stylesheet" href="/css/lessons.css" />
+    <link rel="stylesheet" href="/css/vars.css" />
+    <script src="/libraries/jquery/jquery.js"></script>
+    <script src="/libraries/alertify/alertify.min.js"></script>
   </head>
   <body>
     <!-- Lessons -->
@@ -22,6 +22,6 @@
       first lesson
     </div>
 
-    <script src="../js/lessons.js"></script>
+    <script src="/js/lessons.js"></script>
   </body>
 </html>
