working on basics lesson 1

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               <span class="skill green skillhover"></span>
               <p>Basics 1</p>
             </a>
-            <a class="basics2 basic pointer" href="skills/basics2.html">
+            <!-- <a class="basics2 basic pointer" href="skills/basics2.html">
               <span class="skill pink skillhover"></span>
               <p>Basics 2</p>
             </a>
@@ -232,7 +232,7 @@
             <a class="science pointer" href="skills/science.html">
               <span class="skill pink skillhover"></span>
               <p>Science</p>
-            </a>
+            </a> -->
 
             <!-- <span class="added-skill">
               <a class="add pointer">
