--- a/skills/basics1.html
+++ b/skills/basics1.html
@@ -23,10 +23,11 @@
         <h2>Lesson 1 of 3</h2>
 
         <p class="lesson-preview">
-          el, hombre, la, mujer, yo, un, una, soy, niño, niña
+          ال  | رجل  | امراه  | انا  | ولد | بنت
+          <!-- el, hombre, la, mujer, yo, un, una, soy, niño, niña -->
         </p>
 
-        <button class="btn--default gotolesson">start</button>
+        <a class="btn--default gotolesson" href="../lessons/basics1/lesson1.html">start</a>
       </div>
       <div class="lesson-flyer alphabet txtcenter">
         <h2>Lesson 2 of 3</h2>
@@ -35,7 +36,7 @@
           él, es, ella, come, tú, eres, usted, manzana
         </p>
 
-        <button class="btn--default gotolesson">start</button>
+        <a class="btn--default gotolesson" href="../lessons/basics1/lesson2.html">start</a>
       </div>
       <div class="lesson-flyer alphabet txtcenter">
         <h2>Lesson 3 of 3</h2>
@@ -44,7 +45,7 @@
           pan, como, comes, agua, leche, bebe, bebo, bebes
         </p>
 
-        <button class="btn--default gotolesson">start</button>
+        <a class="btn--default gotolesson" href="../lessons/basics1/lesson3.html">start</a>
       </div>
       <div class="lesson-flyer alphabet txtcenter">
         <h2>Lesson Review</h2>
@@ -53,7 +54,7 @@
           &nbsp;
         </p>
 
-        <button class="btn--default gotolesson">start</button>
+        <a class="btn--default gotolesson" href="../lessons/basics1/review.html">start</a>
       </div>
     </div>
 
