Important note for introduction

--- a/skills/introduction.html
+++ b/skills/introduction.html
@@ -32,6 +32,8 @@
           <b class="bold-heading">Modern Standard Arabic or Classical Arabic?</b>
           Arabic is the official language of the counties within the Arab League.  The Arab Leagues is a region of 22 countries which covers a vast geographic area from Southwest Asia to Northwest Africa. Arabic is also used by over 1 million Muslims, as Classical Arabic is the religious language of the Qur’an (The holy book of Islam).  Classical Arabic is now considered more of a written language than a spoken one. Modern Standard Arabic (MSA) is what is mainly understood across most Arabic countries and is the version used to broadcast news on television, and what most students use as an introduction to Arabic.  Official documents, newspapers and modern literature also tend to be written in MSA.
 
+          With ArabEngo you will be learning, "Modern Standard Arabic".
+
           <b class="bold-heading">Will Arabic help me with learning any other languages?</b>
           You will encounter difficulties with Arabic dialects but you will be able to communicate using MSA.  If you are learning for a specific purpose/ going to a particular country, it may be worth learning MSA as your introduction to Arabic and dabbling in some phrases of the local dialect. As Arabic is a Semantic language, you will find similarities with spoken Aramaic and Hebrew.  As the alphabet is used by other languages, you will be able to decipher letters form Pashto, Kurdish, Urdu and Persian/Farsi – but you won’t know what they mean!
 
