Voice recognition test

--- a/lessons/test/speech-test.html
+++ b/lessons/test/speech-test.html
@@ -54,7 +54,7 @@
           <a class="pointer listen">
             <i class="fa fa-volume-up"></i>
           </a>
-          <span class="fr pointer arb ques">رجل</span>
+          <span class="fr pointer answer arb ques">رجل</span>
         </div>
       </div>
       <div class="fill" style="position: absolute; bottom: 1em;">
@@ -66,7 +66,7 @@
             <a class="pointer speak xxx-large">
               <i class="mic fa fa-microphone" style="transform: scale(0.8);"></i>
             </a>
-            <input class="hide result" type="text" data-output="listen">
+            <button class="hide correct"></button>
           </span>
         </div>
       </div>
