Revised chat and lessons

--- a/designers/skillMaker/index.html
+++ b/designers/skillMaker/index.html
@@ -67,7 +67,6 @@
       <!--<button class="btn--default fa fa-bars add menuicon pointer"></button>-->
       <label for="menuicon" class="btn--default fa fa-bars add menuicon pointer" style="padding-top: 15px;"></label>
     </span>
-    <!--<button class="btn--default fa fa-plus add" data-add="skill"></button>-->
     <span class="header hold-buttons">
       <button class="btn--default fa fa-times add" style="display: none;" data-design="lesson"></button>
       <button class="btn--default fa fa-download add" data-download="skill"></button>
@@ -135,11 +134,6 @@
           <div class="skillcontainer">
             <div class="skilltitlebar">
               <span class="skill capitalize" data-set="editable" data-skill="name">Basics 1</span>
-<!--
-              <i class="pointer fa fa-sticky-note" style="margin-right: 15px;" data-add="notes"></i>
-              <i class="pointer fa fa-book" style="margin-left: 15px;" data-add="dictionary"></i>
--->
-              <!--<button class="btn--default ib wauto fa fa-times add fr" data-delete="skill" style="padding-top: 17px; padding-left: 0;"></button>-->
               <button class="btn--default ib wauto fa fa-plus add fr" data-add="lesson" style="padding-top: 17px; padding-left: 0;"></button>
             </div>
 
@@ -155,12 +149,12 @@
                 <a class="btn--default gotolesson" href="javascript:void(0)">view</a>
               </div>
               <span data-place="lesson"></span>
-              <div class="lesson-flyer txtcenter">
+              <div class="lesson-chat lesson-flyer txtcenter">
                 <h2>Lesson Counter</h2>
 
                 <div style="font-size: 70px; margin: auto auto 19px auto; height: 93px;">
                   <a class="pointer" href="javascript:void(0)">
-                    <i class="fa fa-microphone"></i>
+                    <i class="fa fa-comment"></i>
                   </a>
                 </div>
 
@@ -168,59 +162,10 @@
 
                 <p></p>
 
-                <a class="btn--default pointer gotolesson" href="javascript:alertify.log('coming soon...')">speak now</a>
+                <a class="btn--default pointer gotolesson" href="javascript:alertify.log('coming soon...')">chat now</a>
               </div>
             </div>
           </div>
-  <!--
-          <p class="skill">Basics 1</p>
-          <p class="skill">Basics 2</p>
-          <p class="skill">Phrases</p>
-          <p class="skill">Food</p>
-          <p class="skill">Animals</p>
-          <p class="skill">Plurals</p>
-          <p class="skill">Possession</p>
-          <p class="skill">Clothing</p>
-          <p class="skill">Questions</p>
-          <p class="skill">Present 1</p>
-          <p class="skill">Colors</p>
-          <p class="skill">Conjunctions</p>
-          <p class="skill">Family</p>
-          <p class="skill">Prepositions</p>
-          <p class="skill">Time</p>
-          <p class="skill">Household</p>
-          <p class="skill">Sizes</p>
-          <p class="skill">Occupation</p>
-          <p class="skill">Adject. 1</p>
-          <p class="skill">Present 2</p>
-          <p class="skill">Determin.</p>
-          <p class="skill">Adverbs</p>
-          <p class="skill">Objects</p>
-          <p class="skill">To Be</p>
-          <p class="skill">Places</p>
-          <p class="skill">People</p>
-          <p class="skill">Obj. Pronouns</p>
-          <p class="skill">Numbers</p>
-          <p class="skill">Past Tense</p>
-          <p class="skill">Present 3</p>
-          <p class="skill">Countries</p>
-          <p class="skill">Adject 2</p>
-          <p class="skill">Pronouns</p>
-          <p class="skill">Direction</p>
-          <p class="skill">Education</p>
-          <p class="skill">Participle</p>
-          <p class="skill">Feelings</p>
-          <p class="skill">Nature</p>
-          <p class="skill">Sports</p>
-          <p class="skill">Medical</p>
-          <p class="skill">Business</p>
-          <p class="skill">Communication</p>
-          <p class="skill">Spiritual</p>
-          <p class="skill">Future</p>
-          <p class="skill">Arts</p>
-          <p class="skill">Politics</p>
-          <p class="skill">Science</p>
-  -->
         </div>
       </div>
     </div>
