--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=9" />
     <meta name="description" content="Learn Arabic for English Speakers with ArabEngo.">
     <meta name="author" content="Michael Schwartz">
-    <link rel="icon" type="image/vnd.microsoft.icon" href="logo.ico">
-    <link rel="SHORTCUT ICON" href="logo.ico">
+    <link rel="icon" type="image/vnd.microsoft.icon" href="favicon.ico">
+    <link rel="SHORTCUT ICON" href="favicon.ico">
     <link rel="stylesheet" href="css/index.css">
     <script src="libraries/jquery/jquery.js"></script>
     <script src="libraries/alertify/alertify.min.js"></script>
@@ -25,7 +25,7 @@
             <h3 class="uk-card-title uk-text-center">Contribute to ArabEngo!</h3>
             <p class="donate">
               <span>
-                <a href="https://cash.me/$mschwar4">
+                <a href="https://cash.me/$mschwar4" target="_blank">
                   <img src="imgs/square_cash.svg" alt="Donate via SquareCash">
                 </a>
               </span>
@@ -33,7 +33,7 @@
                 Your <a href="https://github.com/mikethedj4/ArabEngo" target="_blank"> <i class="fa fa-github"></i> contribution</a> helps keep this application free and under development!
               </span>
               <span>
-                <a href="https://www.paypal.me/mikethedj4">
+                <a href="https://www.paypal.me/mikethedj4" target="_blank">
                   <img src="imgs/paypal.svg" alt="Donate via PayPal">
                 </a>
               </span>
@@ -107,7 +107,7 @@
           </a>
         </div>
         <div uk-scrollspy="cls: uk-animation-slide-right; repeat: true">
-          <a class="pointer uk-card uk-card-default uk-card-hover uk-card-body uk-width-1-@m" href="javascript:UIkit.notification('coming soon...')" target="_blank">
+          <div uk-toggle="target: #arabengochats" class="pointer uk-card uk-card-default uk-card-hover uk-card-body uk-width-1-@m">
             <div class="uk-card-badge uk-label">Community</div>
             <div class="uk-grid-small uk-flex-middle" uk-grid>
               <div class="uk-width-auto">
@@ -118,14 +118,14 @@
               </div>
             </div>
             <p>Interact with chats made by the ArabEngo community!</p>
-          </a>
+          </div>
         </div>
       </div>
       <hr class="uk-divider-icon">
       <p>&nbsp;</p>
 
       <!-- off-canvas introduction menu -->
-      <div id="introduction" uk-offcanvas="overlay: true">
+      <div id="introduction" class="bright" uk-offcanvas="overlay: true">
         <div class="uk-offcanvas-bar">
           <button class="uk-offcanvas-close" type="button" uk-close></button>
 
@@ -154,6 +154,15 @@
           <a href="http://www.aataweb.org/about" target="_blank">http://www.aataweb.org/</a><br>
           <a href="http://www.arabion.net/learnarabic.html" target="_blank">http://www.arabion.net/</a><br>
           <a href="https://en.wikipedia.org/wiki/Arabic" target="_blank">https://en.wikipedia.org/wiki/Arabic</a>
+        </div>
+      </div>
+      <div id="arabengochats" uk-modal>
+        <div class="uk-modal-dialog">
+          <button class="uk-modal-close-default" type="button" uk-close></button>
+
+          <div class="uk-modal-body" uk-overflow-auto style="padding: 0; height: 100vh;">
+            <iframe src="community.html" width="100%" height="100%" frameborder="0"></iframe>
+          </div>
         </div>
       </div>
     </div>
