added gender to profile info

--- a/message/index.html
+++ b/message/index.html
@@ -132,6 +132,10 @@
           <button class="uk-offcanvas-close" type="button" uk-close></button>
           
           <div class="tc cur-defaut avatarbg" style="background-image: url('../imgs/kareem.svg')">&nbsp;</div>
+          <div class="tc">
+            <input id="setGender" data-call="gender" type="checkbox" disabled checked/>
+            <label for="setGender" class="gender" data-gender="male"></label>
+          </div>
           <h3 class="tc nameoutput" data-output="name" class="tc"></h3>
           <h4 class="location">
             <span class="uk-margin-small-right" uk-icon="icon: location"></span> <span data-set="location">Chicago, IL</span>
