--- a/editor/index.html
+++ b/editor/index.html
@@ -147,7 +147,11 @@
 
           <button id="top" class="uk-offcanvas-close" type="button" uk-close></button>
           
-          <div class="tc pointer avatarbg" style="background-image: url('../imgs/kareem.svg')">&nbsp;</div>
+          <div class="tc pointer avatarbg" data-set="avatar" style="background-image: url('../imgs/kareem.svg')">&nbsp;</div>
+          <div class="tc">
+            <input id="setGender" data-call="gender" type="checkbox" />
+            <label for="setGender" class="pointer gender" data-gender="male" checked></label>
+          </div>
           <h3 class="tc nameoutput contact" data-output="name" class="tc"></h3>
           <h4 class="location">
             <span class="uk-margin-small-right" uk-icon="icon: location"></span> <span data-set="location" contenteditable="true">Chicago, IL</span>
