--- a/lessons/kareem.html
+++ b/lessons/kareem.html
@@ -164,6 +164,10 @@
           <button class="uk-offcanvas-close" type="button" uk-close></button>
           
           <div class="tc cur-defaut avatarbg" style="background-image: url('../imgs/kareem.svg')">&nbsp;</div>
+          <div class="tc">
+            <input id="setGender" data-call="gender" type="checkbox" disabled checked />
+            <label for="setGender" class="gender" data-gender="male"></label>
+          </div>
           <h3 class="tc nameoutput" data-output="name" class="tc"></h3>
           <!--<h4>Title</h4>-->
           <h4 class="location">
