saved state for gender

--- a/editor/index.html
+++ b/editor/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>ArabEngo: chatMaker</title>
+    <title>ArabEngo: Chat Maker</title>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=9">
@@ -24,7 +24,7 @@
             <span class="fa fa-caret-left scale"></span>
           </a>
           <a href="javascript:void(0)">
-            <span class="fa fa-save scale"></span>
+            <span class="fa fa-share-square-o scale"></span>
           </a>
         </div>
         <span class="contact" data-person="Your Name" data-gender="male" contenteditable="true"></span>
@@ -149,8 +149,8 @@
           
           <div class="tc pointer avatarbg" data-set="avatar" style="background-image: url('../imgs/kareem.svg')">&nbsp;</div>
           <div class="tc">
-            <input id="setGender" data-call="gender" type="checkbox" />
-            <label for="setGender" class="pointer gender" data-gender="male" checked></label>
+            <input id="setGender" data-call="gender" type="checkbox" checked/>
+            <label for="setGender" class="pointer gender" data-gender="male"></label>
           </div>
           <h3 class="tc nameoutput contact" data-output="name" class="tc"></h3>
           <h4 class="location">
@@ -163,7 +163,7 @@
           <h1 class="uk-nav-header">Bio</h1>
           <p data-set="bio" contenteditable="true">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
           
-          <ul class="uk-nav uk-nav-default">
+          <ul class="uk-nav uk-nav-default" data-social="links">
             <li class="uk-nav-header">Contact</li>
             <li>
               <a href="#">
