--- a/editor/index.html
+++ b/editor/index.html
@@ -23,7 +23,7 @@
           <a href="../">
             <span class="fa fa-caret-left scale"></span>
           </a>
-          <a href="javascript:void(0)">
+          <a href="javascript:void(0)" data-call="share">
             <span class="fa fa-share-square-o scale"></span>
           </a>
         </div>
@@ -40,6 +40,24 @@
             <span class="fa fa-user-circle-o scale"></span>
           </a>
         </div>
+      </div>
+
+      <div class="sharelist hide">
+        <a class="share-facebook" href="https://www.facebook.com/sharer/sharer.php?u=http%3A//mikethedj4.github.io/ArabEngo/" target="_blank">
+          <i class="fa fa-facebook"></i>
+        </a>
+        <a class="share-twitter" href="https://twitter.com/home?status=Learn%20%23Arabic%20for%20%23English%20Speakers%20with%20%23ArabEngo%20-%20http%3A//mikethedj4.github.io/ArabEngo/" target="_blank">
+          <i class="fa fa-twitter"></i>
+        </a>
+        <a class="share-gplus" href="https://plus.google.com/share?url=http%3A//mikethedj4.github.io/ArabEngo/" target="_blank">
+          <i class="fa fa-google-plus"></i>
+        </a>
+        <a class="share-linkedin" href="https://www.linkedin.com/shareArticle?mini=true&url=http%3A//mikethedj4.github.io/ArabEngo/&title=Learn%20%23Arabic%20for%20%23English%20Speakers%20with%20%23ArabEngo&summary=&source=" target="_blank">
+          <i class="fa fa-linkedin-square"></i>
+        </a>
+        <a class="share-github pointer comingsoon">
+          <i class="fa fa-github"></i>
+        </a>
       </div>
 
       <div class="chat-container">
