--- a/lessons/test-chat.html
+++ b/lessons/test-chat.html
@@ -23,7 +23,7 @@
           <a href="../">
             <span class="fa fa-caret-left scale"></span>
           </a>
-          <a class="pointer" data-action="share">
+          <a class="pointer" data-call="share">
             <span class="fa fa-share-square-o scale"></span>
           </a>
         </div>
