--- a/lessons/test-chat.html
+++ b/lessons/test-chat.html
@@ -46,13 +46,13 @@
         <a class="share-facebook" href="https://www.facebook.com/sharer/sharer.php?u=http%3A//mikethedj4.github.io/ArabEngo/" target="_blank">
           <i class="fa fa-facebook"></i>
         </a>
-        <a class="share-twitter" href="https://twitter.com/home?status=Learn%20%23Arabic%20for%20%23English%20Speakers%20with%20%23ArabEngo%20-%20http%3A//mikethedj4.github.io/ArabEngo/" target="_blank">
+        <a class="share-twitter" href="https://twitter.com/home?status=Learn%20%23Arabic%20for%20%23English%20Speakers%20with%20%23ArabEngo%20%23ArabEngoChat%20-%20http%3A//mikethedj4.github.io/ArabEngo/" target="_blank">
           <i class="fa fa-twitter"></i>
         </a>
         <a class="share-gplus" href="https://plus.google.com/share?url=http%3A//mikethedj4.github.io/ArabEngo/" target="_blank">
           <i class="fa fa-google-plus"></i>
         </a>
-        <a class="share-linkedin" href="https://www.linkedin.com/shareArticle?mini=true&url=http%3A//mikethedj4.github.io/ArabEngo/&title=Learn%20%23Arabic%20for%20%23English%20Speakers%20with%20%23ArabEngo&summary=&source=" target="_blank">
+        <a class="share-linkedin" href="https://www.linkedin.com/shareArticle?mini=true&url=http%3A//mikethedj4.github.io/ArabEngo/&title=Learn%20%23Arabic%20for%20%23English%20Speakers%20with%20%23ArabEngo%20%23ArabEngoChat&summary=&source=" target="_blank">
           <i class="fa fa-linkedin-square"></i>
         </a>
         <a class="share-github pointer comingsoon">
