making tool name simple, just ArabEngo's chat editor

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <img class="uk-border-circle" width="40" height="40" src="imgs/tool.svg">
               </div>
               <div class="uk-width-expand">
-                <h3 class="uk-card-title uk-margin-remove-bottom">chatMaker</h3>
+                <h3 class="uk-card-title uk-margin-remove-bottom">Editor</h3>
               </div>
             </div>
             <p>Build your own chat session and share it with the world!</p>
