no scroll animation (ran bad via mobile)

--- a/index.html
+++ b/index.html
@@ -47,21 +47,21 @@
       <!-- lessons -->
       <hr class="uk-divider-icon">
       <div class="uk-child-width-1-2@s uk-grid-match" uk-grid>
-        <div uk-scrollspy="cls: uk-animation-slide-left; repeat: true">
+        <div>
           <div uk-toggle="target: #introduction" class="pointer uk-card uk-card-primary uk-card-hover uk-card-body uk-width-1-@m">
             <div class="uk-card-badge uk-label">Beginner</div>
             <h3 class="uk-card-title">Introduction</h3>
             <p>All you need to know about ArabEngo!</p>
           </div>
         </div>
-        <div uk-scrollspy="cls: uk-animation-slide-right; repeat: true">
+        <div>
           <a class="pointer uk-card uk-card-secondary uk-card-hover uk-card-body uk-width-1-@m" href="lessons/alphabet/index.html" target="_blank">
             <div class="uk-card-badge uk-label">Beginner</div>
             <h3 class="uk-card-title">Alphabet</h3>
             <p>Fun games to learn the arabic alphabet!</p>
           </a>
         </div>
-        <div uk-scrollspy="cls: uk-animation-slide-left; repeat: true">
+        <div>
           <a class="pointer uk-card uk-card-default uk-card-hover uk-card-body uk-width-1-@m" href="lessons/akira.html" target="_blank">
             <div class="uk-card-badge uk-label">Beginner</div>
             <div class="uk-grid-small uk-flex-middle" uk-grid>
@@ -75,7 +75,7 @@
             <p>In Arabic words change depending on the gender you're speaking with. First lets learn how to introduce ourselves to a female.</p>
           </a>
         </div>
-        <div uk-scrollspy="cls: uk-animation-slide-right; repeat: true">
+        <div>
           <a class="pointer uk-card uk-card-default uk-card-hover uk-card-body uk-width-1-@m" href="lessons/kareem.html" target="_blank">
             <div class="uk-card-badge uk-label">Beginner</div>
             <div class="uk-grid-small uk-flex-middle" uk-grid>
@@ -92,7 +92,7 @@
       </div>
       <hr class="uk-divider-icon">
       <div class="uk-child-width-1-2@s uk-grid-match" uk-grid>
-        <div uk-scrollspy="cls: uk-animation-slide-left; repeat: true">
+        <div>
           <a class="pointer uk-card uk-card-default uk-card-hover uk-card-body uk-width-1-@m" href="javascript:UIkit.notification('coming soon...')" target="_blank">
             <div class="uk-card-badge uk-label">Tool</div>
             <div class="uk-grid-small uk-flex-middle" uk-grid>
@@ -106,7 +106,7 @@
             <p>Build your own chat session and share it with the world!</p>
           </a>
         </div>
-        <div uk-scrollspy="cls: uk-animation-slide-right; repeat: true">
+        <div>
           <div uk-toggle="target: #arabengochats" class="pointer uk-card uk-card-default uk-card-hover uk-card-body uk-width-1-@m">
             <div class="uk-card-badge uk-label">Community</div>
             <div class="uk-grid-small uk-flex-middle" uk-grid>
