minor style adjustment

--- a/editor/index.html
+++ b/editor/index.html
@@ -26,6 +26,9 @@
           <a href="javascript:void(0)" data-call="share">
             <span class="fa fa-share-square-o scale"></span>
           </a>
+          <a href="javascript:void(0)" data-clear="chat">
+            <span class="fa fa-file-o scale"></span>
+          </a>
         </div>
         <span class="contact" data-person="Your Name" data-gender="male" contenteditable="true"></span>
 
