minor style adjustments

--- a/editor/index.html
+++ b/editor/index.html
@@ -36,7 +36,7 @@
           <a class="pointer uk-modal-close" data-add="emotion">
             <span class="fa fa-phone scale"></span>
           </a>
-          <a class="pointer uk-modal-close" data-add="emotion">
+          <a class="pointer uk-modal-close largephone" data-add="emotion">
             <span class="fa fa-video-camera scale"></span>
           </a>
           <a class="pointer uk-modal-close" data-add="emotion" uk-toggle="target: #user-info">
@@ -71,7 +71,7 @@
             Chat ends when the bot says goodbye, followed by your goodbye response.
           -->
 
-          <span data-output="messages">
+          <span class="added-msgs" data-output="messages">
             <!--
             <div class="them msg">
               <p class="message" data-meaning="Welcome!">اهلا</p>
