--- a/lessons/kareem.html
+++ b/lessons/kareem.html
@@ -33,7 +33,7 @@
           <a class="pointer">
             <span class="fa fa-phone scale"></span>
           </a>
-          <a class="pointer">
+          <a class="pointer largephone">
             <span class="fa fa-video-camera scale"></span>
           </a>
           <a class="pointer" uk-toggle="target: #user-info">
