you can now send multiple chats

--- a/lessons/kareem.html
+++ b/lessons/kareem.html
@@ -75,7 +75,7 @@
             <p class="message" data-meaning="Hello!">مرحبا</p>
           </div>
           <div class="them msg hide">
-            <p class="message" data-meaning="My name is Akira">انا اسمي أكيرا</p>
+            <p class="message" data-meaning="My name is Kareem">انا اسمي كريم</p>
           </div>
           <div class="tr you msg hide">
             <p class="message" data-meaning="Nice to meet you">فر صة سعيدة</p>
@@ -97,9 +97,6 @@
           </div>
           <div class="tr you msg hide">
             <p class="message" data-meaning="Goodbye">مع السلامه</p>
-          </div>
-          <div class="them msg hide">
-            <p class="message"></p>
           </div>
         </div>
 
