--- a/lessons/test-chat.html
+++ b/lessons/test-chat.html
@@ -68,16 +68,16 @@
             Chat ends when the bot says goodbye, followed by your goodbye response.
           -->
 
-          <div class="them msg">
-            <p class="message" data-meaning="Welcome!">اهلا</p>
-          </div>
           <div class="tr you msg hide">
             <p class="message" data-meaning="Hello!">مرحبا</p>
           </div>
-          <div class="them msg hide">
-            <p class="message" data-meaning="My name is Akira">انا اسمي أكيرا</p>
+          <div class="tr you msg hide">
+            <p class="message" data-meaning="My name is Michael">انا اسمي مايكل</p>
           </div>
           <div class="them msg hide">
+            <p class="message" data-meaning="Welcome!">اهلا</p>
+          </div>
+          <div class="them emoticon msg hide">
             <p class="message">
               <img src="../imgs/emoticons/emoji_9.gif">
             </p>
@@ -96,6 +96,9 @@
           </div>
           <div class="tr you msg hide">
             <p class="message" data-meaning="I'm good. Thank you!">انا بخير شكرا</p>
+          </div>
+          <div class="them msg hide">
+            <p class="message" data-meaning="Goodbye">مع السلامه</p>
           </div>
         </div>
 
