--- a/editor/index.html
+++ b/editor/index.html
@@ -33,13 +33,13 @@
         <span class="contact" data-person="Your Name" data-gender="male" contenteditable="true"></span>
 
         <div class="ib fr contactbtns cb-right">
-          <a class="pointer uk-modal-close" data-add="emotion">
+          <a class="pointer uk-modal-close">
             <span class="fa fa-phone scale"></span>
           </a>
-          <a class="pointer uk-modal-close largephone" data-add="emotion">
+          <a class="pointer uk-modal-close largephone">
             <span class="fa fa-video-camera scale"></span>
           </a>
-          <a class="pointer uk-modal-close" data-add="emotion" uk-toggle="target: #user-info">
+          <a class="pointer uk-modal-close" uk-toggle="target: #user-info">
             <span class="fa fa-user-circle-o scale"></span>
           </a>
         </div>
@@ -363,7 +363,7 @@
               </a>
             </li>
             <li class="tc">
-              <a class="pointer uk-modal-close" data-add="emotion" data-scroll="top">
+              <a class="pointer uk-modal-close" data-scroll="top">
                 <span class="uk-margin-small-right" uk-icon="icon: arrow-up"></span>
                 <span class="uk-button">Scroll up</span>
                 <span class="uk-margin-small-left" uk-icon="icon: arrow-up"></span>
