--- a/lessons/test-chat.html
+++ b/lessons/test-chat.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>ArabEngo: Meet Akira</title>
+    <title>ArabEngo: Meet Droid</title>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=9">
